ajuste imagenes de modal
se ajusto el tamaño de imágenes para ventanas menores a 397 px

--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
             line-height: 1.2;
         }
 
+        @media (max-width: 397px) {
+            .modal-name img{
+                width: 50px !important;
+                height: 70px !important;
+            }
+        }
+
         /* Media Queries para ajustes responsive */
         @media (max-width: 767px) {
             .container-fluid .btn {
@@ -322,6 +329,8 @@
             transform: scale(1.03);
             box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
         }
+
+        
     </style>
 </head>
 
